# robot_agricultor

BASICO/GPS_PRUEBA/: GPS.py  GPS2.py  GPS3.py  GPS4.py
BASICO/IMU_PRUEBA/: Prueba1.py
BASICO/cap_detector/: CMakeLists.txt  package.xml
BASICO/cap_detector/launch/: detector.launch.py
BASICO/cap_detector/scripts/: detector_node.py  detector_node2.py  detector_node3.py  detector_node4.py  detector_node5.py  detector_node6.py
BASICO/cap_launch/: CMakeLists.txt  package.xml
BASICO/cap_launch/config/: ekf_filter_node.yaml  ekf_imu_gps.yaml  ekf_imu_gps2.yaml  navsat_gps.yaml  parametros.yaml  parametros2.yaml
BASICO/cap_launch/launch/: demo_01.launch  demo_01.launch.py  demo_01.yaml  demo_02.launch.py  demo_03.launch.py  demo_04.launch  demo_04.launch.py  demo_05.launch  demo_05.launch.py  demo_06.launch  demo_06.launch.py  demo_07.launch  demo_07.launch.py  demo_07b.launch.py  demo_08.launch  demo_08.launch.py  demo_09.launch.py  demo_09b.launch.py  demo_10.launch  demo_10.launch.py  demo_11.launch.py  demo_gz.launch.py  robot_localization.launch.py  robot_localization2.launch.py  robot_localization3.launch.py
BASICO/cap_launch/worlds/: world_01.sdf  world_02.sdf
BASICO/cap_nodos/: CMakeLists.txt  package.xml
BASICO/cap_nodos/scripts/: params_01.py  params_02.py  params_03.py  params_04.py
BASICO/cap_robot/: CMakeLists.txt  package.xml
BASICO/cap_robot/config/: ekf_filter_node_map.yaml  ekf_gps_imu.yaml  ekf_gps_imu2.yaml  gps_navsat.yaml  gps_navsat2.yaml
BASICO/cap_robot/launch/: prueba1.launch.py  prueba2.launch.py  robot_integracion.launch.py  robot_integracion2.launch.py  robot_integracion3.launch.py  rviz_and_imu.launch.py
BASICO/cap_robot/rviz/: robot1.rviz  robot2.rviz
BASICO/cap_robot/scripts/: esp32_gui.py  gps1_node.py  gps2_node.py  gps3_node.py  gps4_nodexel.py  imu1_node.py  imu2_node.py  interfaz1.py  interfaz2.py  interfaz3.py  node_enlace.py  odom1_node.py  odom2_node.py  odom3_node.py  odom4_node.py  odom5_node.py  wit_ros2_imu2.py
BASICO/cap_tf2/: CMakeLists.txt  package.xml
BASICO/cap_tf2/launch/: dynamic_broadcaster.launch.py  listener.launch.py  listener_point_transform.launch.py  listener_time_travel.launch.py  static_broadcaster.launch.py  turtlesim_pose_br.launch.py
BASICO/cap_tf2/rviz/: dynamic_frames.rviz  listener.rviz  listener_point_transform.rviz  listener_time_travel.rviz  prueba1.rviz  static_frames(1).rviz  turtlesim_pose_br.rviz
BASICO/cap_tf2/scripts/: dynamic_broadcaster.py  listener.py  listener_point_transform.py  listener_time_travel.py  publisher_point.py  static_broadcaster.py  turtlesim_pose_br.py
BASICO/cap_topicos/: CMakeLists.txt  package.xml
BASICO/cap_topicos/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
BASICO/cap_topicos/install/cap_topicos/lib/cap_topicos/: publisher_array.py  publisher_int.py  publisher_string.py  subscriber_array.py  subscriber_int.py  subscriber_odom.py  subscriber_string.py  teleop.py  teleop_qt.py
BASICO/cap_topicos/install/cap_topicos/share/ament_index/resource_index/package_run_dependencies/: cap_topicos
BASICO/cap_topicos/install/cap_topicos/share/ament_index/resource_index/parent_prefix_path/: cap_topicos
BASICO/cap_topicos/install/cap_topicos/share/cap_topicos/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
BASICO/cap_topicos/install/cap_topicos/share/cap_topicos/cmake/: cap_topicosConfig-version.cmake  cap_topicosConfig.cmake
BASICO/cap_topicos/install/cap_topicos/share/cap_topicos/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
BASICO/cap_topicos/install/cap_topicos/share/cap_topicos/launch/: teleop.launch.py  teleop_odom.launch.py  teleop_qt.launch.py  topicos.launch.py  topicos2.launch.py  topicos_array.launch.py
BASICO/cap_topicos/launch/: teleop.launch.py  teleop_odom.launch.py  teleop_qt.launch.py  topicos.launch.py  topicos2.launch.py  topicos_array.launch.py
BASICO/cap_topicos/log/: latest_build
BASICO/cap_topicos/scripts/: publisher_array.py  publisher_int.py  publisher_string.py  subscriber_array.py  subscriber_int.py  subscriber_odom.py  subscriber_string.py  teleop.py  teleop_qt.py
BASICO/gps_ros2_pruebas/: CMakeLists.txt  package.xml
BASICO/gps_ros2_pruebas/scripts/: gps_node.py  gps_node2.py  gps_node3.py  gps_node4r.py  gps_node5r.py  gps_node6r.py  gps_node7r.py
BASICO/imu_ros2_prueba/: CMakeLists.txt  package.xml
BASICO/imu_ros2_prueba/scripts/: imu_node.py  imu_node2.py  imu_node3.py  imu_node4.py  imu_node6.py  odom_node.py
BASICO/log/: latest_list
BASICO/r2d2_rx_bringup/: CMakeLists.txt  package.xml
BASICO/r2d2_rx_bringup/config/: ekf_global.yaml  gps_wpf_demo.mvc  mapviz_config.yaml
BASICO/r2d2_rx_bringup/launch/: dual_ekf_navsat.launch.py  gazebo.launch.py  gazebo.launch2.py  mapviz.launch.py  robot.launch.py  robot_description.launch.py  rviz.launch.py
BASICO/r2d2_rx_bringup/rviz/: gazebo.rviz  robot.rviz  rviz.rviz
BASICO/r2d2_rx_description/: CMakeLists.txt  package.xml
BASICO/r2d2_rx_description/urdf/: ground.sdf  macros_basico.xacro  macros_gazebo.xacro  macros_robot.xacro  materials.xacro  pruebaground.sdf  robot_skeed_basico.xacro
BASICO/r2d2_rx_nodes/: CMakeLists.txt  package.xml
BASICO/r2d2_rx_nodes/scripts/: dynamic_broadcaster.py  joint_states_pub.py  mapvizdemo.py  navegation.py  navegation2.py  odom_broadcaster.py  static_broadcaster.py
BASICO/robot_agricola/: CMakeLists.txt  package.xml
BASICO/robot_agricola/urdf/: macros_robot.xacro  materiales_colors.xacro
